# rustic-homekit

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: main.rs
